log/build_2024-07-01_10-46-57/rov_practical/stderr.log
  File "/home/eth/ros2_ws/install/rov_practical/lib/python3.10/site-packages/rov_practical/DDDQN.py", line 4
    from GazeboWorld
                    ^
SyntaxError: invalid syntax

